# AI_query_agent_Kubernetes

./: .gitignore  Dockerfile  RBAC.yaml  README.md  demo.cast  deployment.yaml  docker-compose.yml  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cli/: chat.py
k8s/: deployment.yaml  rbac.yaml
src/: config.py
src/agent/: graph.py  memory.py  prompts.py  tools.py
src/api/: app.py  models.py
src/api/routes/: cluster.py  health.py  query.py
src/k8s/: client.py  deployments.py  events.py  health.py  nodes.py  pods.py  services.py
tests/: conftest.py  test_api.py  test_k8s.py
