[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "k8sgpt"
version = "2.0.0"
description = "AI-powered Kubernetes assistant — ask your cluster questions in plain English"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
k8sgpt = "cli.chat:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
